--- a/style.css
+++ b/style.css
@@ -48,22 +48,40 @@ h1{
     justify-content: space-between;
     border: solid;
     height: 200px;
+    align-items: center;
+    margin-bottom: 15px;
 }
 
-.ninja2{
-    display: flex;
-    justify-content: space-around;
-    border: solid;
-    margin-top: 20px;
+.nin-infoL{
+    text-align: center;
 }
+
+.nin-infoR{
+    text-align: center;
+}
+
 
 .col2{
     flex: 1;
-}
-
-.add{
+    vertical-align: middle;
     border: solid;
     height: 100px;
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    gap: 20px;
 }
+
+.add{
+    font-size: larger;
+}
+
+.add button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
 
