--- a/style.css
+++ b/style.css
@@ -81,7 +81,20 @@ h1{
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: rgb(255, 217, 102);
 }
 
+.leftbtn{
+    background-color: rgb(255, 217, 102);
+    padding: 4px 10px;
+    box-shadow: 3px 1px black;
+}
+
+.rightbtn{
+    background-color: rgb(147, 196, 125);
+    padding: 4px 20px;
+    width: 150px;
+    box-shadow: 3px 1px black;
+}
 
 
